--- a/dod.html
+++ b/dod.html
@@ -134,8 +134,6 @@
 <ul class="menu menu3">
   <li><a href="?do=cr.main" ><span>Canned Reports</span></a></li>
   <li><a href="{{ url_for('adhoc.uPickit') }}"><span>Ad Hoc Reports</span></a></li>
-  <li><a href="{{ url_for('adhoc.DoD') }}"><span>Ad Hoc Reports</span></a></li>
-  <li><a href="{{ url_for('adhoc.myrepo') }}"><span>Ad Hoc Reports</span></a></li>
 </ul>
 
 <div class="menuHeader">Global</div>
@@ -209,14 +207,14 @@ $(function(){
 
 <br />
 <br />
-<div id="searching">
-    <img src="static/images/working.gif" />&nbsp;<span style="font-weight: bold; font-size:24px;" id="SearchText">Processing ... </span>
-</div>
-<div id="maint">
-    <img src="static/images/working.gif" />&nbsp;<span style="font-weight: bold; font-size:24px;" id="SearchText">Performing Maintenance... </span>
+<div id="statusMessage" style="text-align:left; font-size: 24px; margin-top: 10px;">
+    <img src="{{ url_for('static', filename='images/working.gif') }}" alt="Loading..." style="vertical-align:left;">
+    <strong>Processing ...</strong><br>
+    <img src="{{ url_for('static', filename='images/working.gif') }}" alt="Loading..." style="vertical-align:left;">
+    <strong>Performing Maintenance...</strong>
 </div>
 
-<a href="/index.cfm?do=ah.dspDoDReporting">DoD Reporting</a> >><br /><br />
+<a href="{{ url_for('adhoc.DoD') }}">DoD Reporting</a> >><br /><br />
 
     <strong>Please choose which report you would like to run.</strong>
 
